@@ -1,5 +1,7 @@
 @echo off
 if not exist build mkdir ..\build
 pushd ..\build
-g++ ..\source\main.c -o quark.exe
+gcc ..\source\*.c -o quark.exe
 popd
+
+
